# hbrs-praktikum

./: Messungen.xlsx
OpenRoboticBoard/: Todo.txt
OpenRoboticBoard/Firmware/Common/: _clean.bat
OpenRoboticBoard/Firmware/Common/Src/: IPC_Repository.h  ORBremote.cpp  ORBremote.h
OpenRoboticBoard/Firmware/Common/Src/Remote/: liborb.cpp  liborb.h  main.cpp
OpenRoboticBoard/Firmware/Common/Tools/Doxygen/: Doxyfile
OpenRoboticBoard/Firmware/ORB/: _clean.bat  _hex2dfu.bat  _load.bat  main_GCC.ebp  main_GCC.eds  main_GCC.elay
OpenRoboticBoard/Firmware/ORB/Src/: AppTask.cpp  AppTask.h  Control.cpp  Remote.cpp  SensorTask.cpp  UART_Ext.h  config.h  config_Board_02_02.h  config_Board_02_04_E.h  descriptor.cpp  descriptor.txt
OpenRoboticBoard/Firmware/ORB/Src/Bluetooth/: BT_RN4678.h
OpenRoboticBoard/Firmware/ORB/Src/Sensor/: SensorAnalog.cpp  SensorI2C.cpp  SensorTOF.cpp
OpenRoboticBoard/Firmware/ORB/Src/Sensor/SensorI2C/: SensorI2C_NXTultraschall.cpp  SensorI2C_NXTultraschall.h
OpenRoboticBoard/Middleware/Doc/HTML/: _doppel_motor_8h_source.html  _drive_8h_source.html  _encoder_servo_8h_source.html  _memory_8h_source.html  _model_servo_8h_source.html  _monitor_8h_source.html  _motor_8h_source.html  _sensor_8h_source.html  _sensor_color_t_c_s3472_8h_source.html  _sensor_digital_8h_source.html  _sensor_extra_8h_source.html  _timer_8h_source.html  _value_8h_source.html  annotated.html  class_doppel_motor-members.html  class_doppel_motor.html  class_drive-members.html  class_drive.html  class_drive_1_1_distance-members.html  class_drive_1_1_distance.html  class_encoder_servo-members.html  class_encoder_servo.html  class_memory-members.html  class_memory.html  class_memory_1_1_item-members.html  class_memory_1_1_item.html  class_model_servo-members.html  class_model_servo.html  class_monitor-members.html  class_monitor.html  class_motor-members.html  class_motor.html  class_sensor-members.html  class_sensor.html  class_sensor_color_t_c_s3472-members.html  class_sensor_color_t_c_s3472.html  class_sensor_digital-members.html  class_sensor_digital.html  class_sensor_extra-members.html  class_sensor_extra.html  (+15 more)
OpenRoboticBoard/Middleware/Src/: Motor.h  Sensor.h
OpenRoboticBoard/UserApp/_Project/CLion/: ORB-Monitor-Tasten.txt  main.uvproj
OpenRoboticBoard/UserApp/_Project/CMakeTest/: CMakeLists.txt  _ORB-Monitor.bat  main.ebp  main.uvgui.Laslo  main.uvproj  main.uvprojx  main_Target.dep  stm32f4xx_gcc.ld
OpenRoboticBoard/UserApp/_Project/CMakeTest/toolchain/: toolchain.cmake
OpenRoboticBoard/UserApp/_Project/Demo/: main.uvgui.Laslo  main.uvopt  main_uvproj.bak
OpenRoboticBoard/UserApp/_Project/Demo/Lib/: entry.cpp
OpenRoboticBoard/UserApp/_Project/Demo/Src/: Application.h
OpenRoboticBoard/UserApp/_Project/DemoX/: CMakeLists.txt  _clean.bat  toolchain.cmake
OpenRoboticBoard/UserApp/_Project/DemoX/Lib/: entry.cpp
OpenRoboticBoard/UserApp/_Project/MyFirstProject/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.uvopt  main.uvproj  main_Target.dep
OpenRoboticBoard/UserApp/_Project/MyFirstProject/Lib/: main.cpp
OpenRoboticBoard/UserApp/_Project/MyFirstProject/Src/: Application.h
